------------------------------
        Version 5.1.1
------------------------------

   . Removed the "DrScheme" compatability program.

   . Improved the speed of the module browser drawing

   . Added search to the standalone module browser window

   . Minor bug fixes

------------------------------
        Version 5.1
------------------------------

   . same (the game) has a new scoring system and different graphics

   . Added image->color-list and color-list->bitmap to 
     2htdp/image

   . The "language in the source" language now automatically
     compiles more files (with the default options). Specifically,
     files that are in a collections directory are now compiled,
     unless they are the main system collection (as reported
     by (find-system-path 'collects-dir).

   . minor bug fixes

------------------------------
        Version 5.0.1
------------------------------

   . Check Syntax now reports obligation information 
     (via a new item in the "View" menu)
   . added file-horizontal and flip-vertical to 2htdp/image

------------------------------
        Version 5.0
------------------------------

   . Scheme => Racket in many places
   . minor bug fixes

------------------------------
        Version 4.2.5
------------------------------

  . a few more improvements to 2htdp/image
  . new language dialog, designed to encourage 
    people to use the module language
  . the module browser shows the phases in
    which each module is invoked (in a new
    "long name" mode)
  . added alt-1 thru alt-9 as shortcuts to swap
    around between tabs

------------------------------
        Version 4.2.4
------------------------------

  . the 2htdp/image library changed:
    - changed how equality works (it is now based on how the 
      images draw, instead of on an underlying algebra
      of images)
    - added cropping and curves
    - overlay, beside, and above now line things up on
      centers, rather than upper lefts