@@ -1,3 +1,10 @@
+   . The EoPL language is no longer available via the Language
+     dialog in DrRacket; use 
+
+       #lang eopl
+
+     and the 'language declared in the source' language in DrRacket.
+
 ------------------------------
         Version 5.1.1
 ------------------------------
